--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.4",
+    "framer-motion": "^12.23.9",
     "gsap": "^3.13.0",
-    "motion": "^12.23.7",
+    "locomotive-scroll": "^4.1.4",
+    "motion": "^12.23.9",
     "next": "15.4.2",
     "preline": "^3.1.0",
     "react": "19.1.0",
