--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@preline/file-upload": "^3.1.0",
     "@tabler/icons-react": "^3.34.1",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.4",
+    "dropzone": "^6.0.0-beta.2",
     "framer-motion": "^12.23.9",
     "gsap": "^3.13.0",
     "locomotive-scroll": "^4.1.4",
+    "lodash": "^4.17.21",
     "motion": "^12.23.9",
     "next": "15.4.2",
     "preline": "^3.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
